force-app/main/default/objects/Lead/fields/Property_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Address PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>