force-app/main/default/objects/Lead/fields/Property_Address_StateCode__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_StateCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Address StateCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>