force-app/main/default/objects/Lead/fields/Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Number__c</fullName>
    <label>Proposal Number</label>
    <type>TextArea</type>
</CustomField>