force-app/main/default/objects/Lead/fields/Push_To_LMS_Date__c.field-meta.xml
<CustomField>
    <fullName>Push_To_LMS_Date__c</fullName>
    <label>Push To LMS Date</label>
    <type>DateTime</type>
</CustomField>