force-app/main/default/objects/Lead/fields/Sales_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead_Id__c</fullName>
    <label>Sales Lead Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>