force-app/main/default/objects/Lead/fields/Sales_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Sales_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used for ABHFL Requirement.</description>
    <label>Sales Prospect</label>
    <type>Checkbox</type>
</CustomField>