force-app/main/default/objects/Lead/fields/Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Date__c</fullName>
    <label>Sanction Date</label>
    <type>DateTime</type>
</CustomField>