force-app/main/default/objects/Lead/fields/SFLMS_Disposition__c.field-meta.xml
<CustomField>
    <fullName>SFLMS_Disposition__c</fullName>
    <label>SFLMS Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>