force-app/main/default/objects/Lead/fields/SFLMS_Disposition_Change_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SFLMS_Disposition_Change_DateTime__c</fullName>
    <label>SFLMS Disposition Change DateTime</label>
    <type>DateTime</type>
</CustomField>