force-app/main/default/objects/Lead/fields/SFLMS_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>SFLMS_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>SFLMS Lead ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>