force-app/main/default/objects/Lead/fields/SFLMS_Lead_owner__c.field-meta.xml
<CustomField>
    <fullName>SFLMS_Lead_owner__c</fullName>
    <label>SFLMS Lead owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>