force-app/main/default/objects/Lead/fields/SFLMS_Status__c.field-meta.xml
<CustomField>
    <fullName>SFLMS_Status__c</fullName>
    <label>SFLMS Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>