force-app/main/default/objects/Lead/fields/SFLMS_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>SFLMS_Status_Change_Date__c</fullName>
    <label>SFLMS Status Change Date</label>
    <type>DateTime</type>
</CustomField>