force-app/main/default/objects/Lead/fields/SFLMS_Sub_disposition__c.field-meta.xml
<CustomField>
    <fullName>SFLMS_Sub_disposition__c</fullName>
    <label>SFLMS Sub disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>