force-app/main/default/objects/Lead/fields/SM_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Email_Id__c</fullName>
    <label>SM Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>