force-app/main/default/objects/Lead/fields/SM_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>SM_Employee_ID__c</fullName>
    <label>SM Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>