force-app/main/default/objects/Lead/fields/SM_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Mobile_Number__c</fullName>
    <label>SM Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>