force-app/main/default/objects/Lead/fields/SM_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Name__c</fullName>
    <label>SM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>