force-app/main/default/objects/Lead/fields/Source_System_API__c.field-meta.xml
<CustomField>
    <fullName>Source_System_API__c</fullName>
    <label>Source System API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>