force-app/main/default/objects/Lead/fields/Sourcing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Branch__c</fullName>
    <label>Sourcing Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>