force-app/main/default/objects/Lead/fields/SPOC_Name__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Name__c</fullName>
    <label>SPOC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>