force-app/main/default/objects/Lead/fields/SPOC_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Name_Formula__c</fullName>
    <formula>FirstName + &apos; &apos; +   LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPOC Name</label>
    <type>Text</type>
</CustomField>