force-app/main/default/objects/Lead/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANDHRA PRADESH</fullName>
            </value>
            <value>
                <fullName>ARUNACHAL PRADESH</fullName>
            </value>
            <value>
                <fullName>ASSAM</fullName>
            </value>
            <value>
                <fullName>BIHAR</fullName>
            </value>
            <value>
                <fullName>CHATTISGARH</fullName>
            </value>
            <value>
                <fullName>DELHI</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
            <value>
                <fullName>GUJARAT</fullName>
            </value>
            <value>
                <fullName>HARYANA</fullName>
            </value>
            <value>
                <fullName>HIMACHAL PRADESH</fullName>
            </value>
            <value>
                <fullName>JAMMU &amp; KASHMIR</fullName>
            </value>
            <value>
                <fullName>JHARKHAND</fullName>
            </value>
            <value>
                <fullName>KARNATAKA</fullName>
            </value>
            <value>
                <fullName>KERALA</fullName>
            </value>
            <value>
                <fullName>MADHYA PRADESH</fullName>
            </value>
            <value>
                <fullName>MAHARASHTRA</fullName>
            </value>
            <value>
                <fullName>MANIPUR</fullName>
            </value>
            <value>
                <fullName>MEGHALAYA</fullName>
            </value>
            <value>
                <fullName>MIZORAM</fullName>
            </value>
            <value>
                <fullName>NAGALAND</fullName>
            </value>
            <value>
                <fullName>ORISSA</fullName>
            </value>
            <value>
                <fullName>PUNJAB</fullName>
            </value>
            <value>
                <fullName>RAJASTHAN</fullName>
            </value>
            <value>
                <fullName>SIKKIM</fullName>
            </value>
            <value>
                <fullName>TAMIL NADU</fullName>
            </value>
            <value>
                <fullName>TRIPURA</fullName>
            </value>
            <value>
                <fullName>UTTAR PRADESH</fullName>
            </value>
            <value>
                <fullName>UTTARANCHAL</fullName>
            </value>
            <value>
                <fullName>WEST BENGAL</fullName>
            </value>
            <value>
                <fullName>ANDAMAN &amp; NICOBAR ISLANDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>