force-app/main/default/objects/Lead/fields/Sub_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Campaign_Code__c</fullName>
    <label>Sub Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>