force-app/main/default/objects/Lead/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Phone Inbound</fullName>
            </value>
            <value>
                <fullName>Phone Outbound</fullName>
            </value>
            <value>
                <fullName>Asset Service Desk</fullName>
            </value>
            <value>
                <fullName>Customer Contact Centre</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Grievance Desk</fullName>
            </value>
            <value>
                <fullName>Customer Retention</fullName>
            </value>
            <value>
                <fullName>CIBIL Data</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
            <value>
                <fullName>Proactive</fullName>
            </value>
            <value>
                <fullName>Promoter Calling</fullName>
            </value>
            <value>
                <fullName>Digital Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>