force-app/main/default/objects/Lead/fields/Sub_Variant__c.field-meta.xml
<CustomField>
    <fullName>Sub_Variant__c</fullName>
    <label>Sub Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>BT+ Top Up</fullName>
            </value>
            <value>
                <fullName>BT - AFFORDABLE REFINANCE</fullName>
            </value>
            <value>
                <fullName>BT APPROVED FI</fullName>
            </value>
            <value>
                <fullName>BT NON-APPROVED FI</fullName>
            </value>
            <value>
                <fullName>BT - REGULAR REFINANCE</fullName>
            </value>
            <value>
                <fullName>GECL</fullName>
            </value>
            <value>
                <fullName>GENERAL PURPOSE LOAN</fullName>
            </value>
            <value>
                <fullName>INSURANCE</fullName>
            </value>
            <value>
                <fullName>LAPBT</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>NEW - AFFORDABLE REFINANCE</fullName>
            </value>
            <value>
                <fullName>NEW - REGULAR REFINANCE</fullName>
            </value>
            <value>
                <fullName>PNI</fullName>
            </value>
            <value>
                <fullName>PRE APPROVED TOP UP</fullName>
            </value>
            <value>
                <fullName>TOP UP (BT+NEW)</fullName>
            </value>
            <value>
                <fullName>TOPUP(NEW)</fullName>
            </value>
            <value>
                <fullName>TOP UP (NEW)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>