force-app/main/default/objects/Lead/fields/Target_LOBs__c.field-meta.xml
<CustomField>
    <fullName>Target_LOBs__c</fullName>
    <label>Target LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Housing Loan</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Motor/ Travel Insurance</fullName>
            </value>
            <value>
                <fullName>Mutual Funds</fullName>
            </value>
            <value>
                <fullName>Stock broking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>