force-app/main/default/objects/Lead/fields/Target_Sub_LOBs__c.field-meta.xml
<CustomField>
    <fullName>Target_Sub_LOBs__c</fullName>
    <label>Target Sub-LOB</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Target_LOBs__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFG</fullName>
            </value>
            <value>
                <fullName>CMG</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>HFC</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>