force-app/main/default/objects/Lead/fields/Track_ID__c.field-meta.xml
<CustomField>
    <fullName>Track_ID__c</fullName>
    <label>Track ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>