force-app/main/default/objects/Lead/fields/Winback_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Winback_Investment_Date__c</fullName>
    <label>Winback Investment Date</label>
    <type>Date</type>
</CustomField>