force-app/main/default/objects/Lead/fields/Winback_Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Winback_Scheme_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winback Scheme Name</label>
    <referenceTo>PRODUCT_MASTER__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>