force-app/main/default/objects/Lead/recordTypes/ABSLAMC_Leads.recordType-meta.xml
<RecordType>
    <fullName>ABSLAMC_Leads</fullName>
    <active>true</active>
    <businessProcess>ABSLAMC Lead Process</businessProcess>
    <label>ABSLAMC Leads</label>
</RecordType>