force-app/main/default/objects/Lead/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <businessProcess>ABCL Prospect Process</businessProcess>
    <label>Service</label>
</RecordType>