force-app/main/default/objects/Lead/validationRules/ABSLAMC_PAN_PEKRN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ABSLAMC_PAN_PEKRN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(PANNO__c) &amp;&amp; ISBLANK(PEKRN__c), true, false)</errorConditionFormula>
    <errorMessage>PAN and PEKRN both can not be blank</errorMessage>
</ValidationRule>