force-app/main/default/objects/Lead/validationRules/ABSLI_Application_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ABSLI_Application_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Business_Unit__c, &apos;ABSLI&apos;),
   NOT(ISNEW()),
   ISPICKVAL(Prospect_Type__c, &apos;Sales&apos;),
   $Profile.Name  &lt;&gt; &apos;System Administrator&apos;,
   ISCHANGED(Application_Number__c),
   NOT(ISBLANK(Application_Number__c)),
   NOT(REGEX(Application_Number__c, &quot;^[a-zA-Z0-9]{1,10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Application_Number__c</errorDisplayField>
    <errorMessage>Application Number should be alphanumeric and cannot exceed 10 characters</errorMessage>
</ValidationRule>