force-app/main/default/objects/Lead/validationRules/Company_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Name_Validation</fullName>
    <active>true</active>
    <description>Company Name is required if the Prospect type is Non Individual</description>
    <errorConditionFormula>IF(ISPICKVAL(ABHFL_Prospect_Type__c, &apos;Non Individual&apos;), IF(Company == null, true, false)  , false)</errorConditionFormula>
    <errorMessage>Company is required</errorMessage>
</ValidationRule>