force-app/main/default/objects/Lead/validationRules/Company_Name_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Name_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISPICKVAL($User.Business_Unit__c ,&apos;ABHFL&apos;),ISPICKVAL(ABHFL_Prospect_Type__c, &apos;Individual&apos;)), 
			IF(Company != null, true, false), false)</errorConditionFormula>
    <errorMessage>Company should be blank for Individual prospect</errorMessage>
</ValidationRule>