force-app/main/default/objects/Lead/validationRules/Email_or_Mobile_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_or_Mobile_Mandatory</fullName>
    <active>true</active>
    <description>Email_or_Mobile_Mandatory</description>
    <errorConditionFormula>AND( ISPICKVAL( Business_Unit__c , &quot;ABHI&quot; ), ISBLANK( Email ), ISBLANK( MobilePhone ))</errorConditionFormula>
    <errorMessage>Either Phone or Email must be provided.</errorMessage>
</ValidationRule>