force-app/main/default/objects/Lead/validationRules/MobilePhone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhone_Validation</fullName>
    <active>true</active>
    <description>Mobile Phone having 10 Digit without accepting the character</description>
    <errorConditionFormula>AND( TEXT(Business_Unit__c) &lt;&gt; &apos;ABSLIG&apos;, OR(!ISNUMBER(MobilePhone),LEN(MobilePhone) &lt;&gt; 10, CONTAINS(MobilePhone,&apos;.&apos;)))</errorConditionFormula>
    <errorMessage>Mobile Number must have only numeric value with 10 digits.</errorMessage>
</ValidationRule>