force-app/main/default/objects/Lead/validationRules/Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Sales_Lead_Id__c != Null,OR(ISCHANGED(FirstName),ISCHANGED(LastName)),False)</errorConditionFormula>
    <errorMessage>Name is not editable after the lead created to service CRM</errorMessage>
</ValidationRule>