force-app/main/default/objects/Lead/validationRules/SPOC_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPOC_Name_Validation</fullName>
    <active>true</active>
    <description>SPOC Name is required if If prospect type is Non Individual</description>
    <errorConditionFormula>IF(ISPICKVAL(ABHFL_Prospect_Type__c, &apos;Non Individual&apos;), IF(SPOC_Name__c == null, true, false)  , false)</errorConditionFormula>
    <errorMessage>SPOC Name is required</errorMessage>
</ValidationRule>