force-app/main/default/objects/Lead/validationRules/Validation_for_Requested_Loan_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Requested_Loan_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Requested_Loan_Amount__c &lt;= 50000</errorConditionFormula>
    <errorDisplayField>Requested_Loan_Amount__c</errorDisplayField>
    <errorMessage>Requested Loan Cannot be lesser than or equal to 50000</errorMessage>
</ValidationRule>