force-app/main/default/objects/Lead/listViews/ABSLILeads.listView-meta.xml
<ListView>
    <fullName>ABSLILeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>External_Lead_ID__c</columns>
    <columns>ABSLI_Lead_Type__c</columns>
    <columns>Lead_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>ABSLI</value>
    </filters>
    <label>ABSLI Leads</label>
    <sharedTo>
        <roleAndSubordinatesInternal>ABSLI_Service_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>