force-app/main/default/objects/Lead/listViews/Sales_Leads.listView-meta.xml
<ListView>
    <fullName>Sales_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Sales</value>
    </filters>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>ABHFL</value>
    </filters>
    <label>Sales Leads</label>
    <sharedTo>
        <roleAndSubordinates>ABHFL_Leads</roleAndSubordinates>
    </sharedTo>
</ListView>